--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="content">
             <h3>Olá, pode me chamar de <span>Alex! (:</span></h3>
-            <p>Tenho 24 anos, estou cursando o 5 semestre de Análise e Desenvolvimento de sistemas na faculdade IESB de Brasília, sou uma pessoas
+            <p>Tenho 24 anos, estou cursando o 5° Semestre de Análise e Desenvolvimento de sistemas na faculdade IESB de Brasília, sou uma pessoas
                 extremamente motivada, sempre em
                 constante desenvolvimento das minhas
                 habilidades e crescimento profissional.
@@ -292,7 +292,7 @@
 
 <!-- contact section ends -->
 
-<div class="credits">Criado Por <span> Alexsander</span> | Todos os Direitos reservados. </div>
+<div class="credits">Criado Por <span> Alexsander</span> | Todos os Direitos reservados.© </div>
 
 
 
