--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 
         <div class="content">
             <h3>Olá, pode me chamar de <span>Alex! (:</span></h3>
-            <p>Tenho 24 anos, estou cursando o 5° Semestre de Análise e Desenvolvimento de sistemas na faculdade IESB, localizada em Brasília. sou uma pessoas
+            <p>Tenho 24 anos, estou cursando o 5° Semestre de Análise e Desenvolvimento de sistemas na faculdade IESB, localizada em Brasília. sou uma pessoa
                 extremamente motivada, sempre em
                 constante desenvolvimento das minhas
                 habilidades e crescimento profissional.
                 Sou uma pessoa bastante analítica,
                 que ao encontrar um problema vai
-                pesquisar e analisar bastante todas as
+                pesquisar e analisar todas as
                 soluções possíveis e escolher a melhor
                 visando o funcionamento do programa
                 e a experiência do usuário.
