--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 
         <div class="content">
             <h3>Olá, pode me chamar de <span>Alex! (:</span></h3>
-            <p>Tenho 24 anos, estou cursando o 5° Semestre de Análise e Desenvolvimento de sistemas na faculdade IESB, localizada em Brasília. sou uma pessoa
-                extremamente motivada, sempre em
+            <p>Tenho 24 anos, estou cursando o 5° Semestre de Análise e Desenvolvimento de Sistemas na faculdade IESB, localizada em Brasília. 
+                Sou uma pessoa extremamente motivada, sempre em
                 constante desenvolvimento das minhas
                 habilidades e crescimento profissional.
-                Sou uma pessoa bastante analítica,
+                Tenho um perfil bastante analítico,
                 que ao encontrar um problema vai
                 pesquisar e analisar todas as
                 soluções possíveis e escolher a melhor
