--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="content">
             <h3>Olá, pode me chamar de <span>Alex! (:</span></h3>
-            <p>Tenho 24 anos, estou cursando o 5° Semestre de Análise e Desenvolvimento de Sistemas na faculdade IESB, localizada em Brasília. 
+            <p>Tenho 24 anos, estou cursando o 5° Semestre de Análise e Desenvolvimento de Sistemas na faculdade IESB, localizada em Brasília.<br> 
                 Sou uma pessoa extremamente motivada, sempre em
                 constante desenvolvimento das minhas
                 habilidades e crescimento profissional.
