--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@
 
         <div class="box-container">
             <div class="box">
-                <h3>FOCO</h3>
-                <p>no progresso</p>
+                <h3>7+</h3>
+                <p>Meses de experiência</p>
             </div>
             <div class="box">
-                <h3>FORÇA</h3>
-                <p>nas dificuldades</p>
-            </div>
-            <div class="box"><br>
-                <h3>&</h3>
-                <!--<p></p>-->
+                <h3>5+</h3>
+                <p>Projetos Finalizados</p>
             </div>
             <div class="box">
-                <h3>FÉ</h3>
-                <p>para todos os dias</p>
+                <h3>300+</h3>
+                <p>Horas de cursos</p>
+            </div>
+            <div class="box">
+                <h3>Desenvolvedor</h3>
+                <p></p>
             </div>
         </div>
 
