--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="js.png" alt="">
+            <img src="1555172.jpeg" alt="">
             <div class="content">
                 <h3>JAVASCRIPT</h3>
                 <h1>Javascript e TypeScript - front-end e back-end
@@ -211,7 +211,7 @@
         </div>
 
         <div class="box">
-            <img src="phhp.png" alt="">
+            <img src="phpz.jpg" alt="">
             <div class="content">
                 <h3>PHP</h3>
                 <h1>PHP completo, ligação com MySQL, envio de
@@ -221,7 +221,7 @@
         </div>
 
         <div class="box">
-            <img src="banco.jpg" alt="">
+            <img src="bancoz.png" alt="">
             <div class="content">
                 <h3>Banco de Dados e SQL</h3>
                 <h1>SQL Server, NoSQL, MySQL, Oracle, T-SQL e PL/SQL</h1>
@@ -242,7 +242,7 @@
         </div>
 
         <div class="box">
-            <img src="html.jpg" alt="">
+            <img src="htmlz.jpeg" alt="">
             <div class="content">
                 <h3>HTML</h3>
                 <p></p>
@@ -250,7 +250,7 @@
         </div>
 
         <div class="box">
-            <img src="css.jpg" alt="">
+            <img src="projeto.png" alt="">
             <div class="content">
                 <h3>CSS</h3>
             </div>
@@ -258,7 +258,7 @@
         </div>
 
         <div class="box">
-            <img src="laravel.jpg" alt="">
+            <img src="laravel.png" alt="">
             <div class="content">
                 <h3>laravel</h3>
                 <h1>Divisão de seu sistema em modelos, visões e controladores.
