--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
 
         <div class="box">
-            <img src="projeto.png" alt="">
+            <img src="csz.jpeg" alt="">
             <div class="content">
                 <h3>CSS</h3>
             </div>
