--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    
+    <link rel="shortcut icon" href="mds.png" type="image/x-icon">
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
