--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <header class="header">
 
     <div class="user">
-        <img src="kj.jpeg" alt="">
+        <img src="hjk.jpg" alt="">
         <h3>Alexsander Hugo</h3>
         <p>DESENVOLVEDOR</p>
     </div>
