--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="content">
         <h3>Alexsander Hugo</h3>
         <p>WEB Developer</p>
-        <a href="https://drive.google.com/uc?id=1vVLmo71JIRk3UbEqS_dD9wpEDPJxKNwP&export=download" class="btn">download CV</a>
+        <a href="https://drive.google.com/u/0/uc?id=1SjYSLK2tEU_nffrz6XW0LTYhSqbHsH1E&export=download" class="btn">download CV</a>
         <!--<a href="https://drive.google.com/uc?id=1vVLmo71JIRk3UbEqS_dD9wpEDPJxKNwP&export=download" class="btn">Grade Curricular</a>-->
     </div>
 
@@ -110,7 +110,7 @@
                 visando o funcionamento do programa
                 e a experiência do usuário.
             </p>
-            <a href="https://drive.google.com/uc?id=1vVLmo71JIRk3UbEqS_dD9wpEDPJxKNwP&export=download" class="btn">CV Resumido</a>
+            <a href="https://drive.google.com/u/0/uc?id=1SjYSLK2tEU_nffrz6XW0LTYhSqbHsH1E&export=download" class="btn">CV Resumido</a>
         </div>
         
 
