--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> 
 
-    <!--<link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,700" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,700" rel="stylesheet">
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
@@ -23,7 +23,7 @@
 <header class="header">
 
     <div class="user">
-        <img src="hjk.jpg" alt="">
+        <img src="kj.jpeg" alt="">
         <h3>Alexsander Hugo</h3>
         <p>DESENVOLVEDOR</p>
     </div>
@@ -56,6 +56,7 @@
         <p>WEB Developer</p>
         <a href="https://drive.google.com/u/0/uc?id=1SjYSLK2tEU_nffrz6XW0LTYhSqbHsH1E&export=download" class="btn">download CV</a>
         <!--<a href="https://drive.google.com/uc?id=1vVLmo71JIRk3UbEqS_dD9wpEDPJxKNwP&export=download" class="btn">Grade Curricular</a>-->
+        <!--https://drive.google.com/uc?id=1vVLmo71JIRk3UbEqS_dD9wpEDPJxKNwP&export=download-->
     </div>
 
     <div class="share">
@@ -110,7 +111,7 @@
                 visando o funcionamento do programa
                 e a experiência do usuário.
             </p>
-            <a href="https://drive.google.com/u/0/uc?id=1SjYSLK2tEU_nffrz6XW0LTYhSqbHsH1E&export=download" class="btn">CV Resumido</a>
+            <a href="https://drive.google.com/uc?id=1vVLmo71JIRk3UbEqS_dD9wpEDPJxKNwP&export=download" class="btn">CV Resumido</a>
         </div>
         
 
@@ -349,6 +350,19 @@
                     Conceitos avançados de criações de layouts utilizando a sintaxe Blade do Laravel.
                     Conceito de migrations, que facilita e agiliza a manutenção de sua base de dados.
                     Eloquent ORM...</h1>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="cwins.jpeg" alt="">
+            <div class="content">
+                <h3>C# .NET</h3>
+                <h1 class="exp">Struct.
+                     Passagem de parâmetros por Valor e por Referência.
+                     Classes Abstratas, Seladas(Sealed) e Interface.
+                     Classe e Métodos Parciais.
+                     Enumeradores.
+                     Tratamento de erros (Try, Catch e Finally).</h1>
             </div>
         </div>
 
