--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <header class="header">
 
     <div class="user">
-        <img src="hjk.jpg" alt="">
+        <img src="imagem/perfil.jpg" alt="">
         <h3>Alexsander Hugo</h3>
         <p>DESENVOLVEDOR</p>
     </div>
@@ -209,7 +209,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="1555172.jpeg" alt="">
+            <img src="imagem/javascript.jpeg" alt="">
             <div class="content">
                 <h3>JAVASCRIPT</h3>
                 <h1 class="exp">...</h1>
@@ -218,7 +218,7 @@
         </div>
 
         <div class="box">
-            <img src="phpz.jpg" alt="">
+            <img src="imagem/php.jpg" alt="">
             <div class="content">
                 <h3>PHP</h3>
                 <h1 class="exp">...</h1>
@@ -227,7 +227,7 @@
         </div>
 
         <div class="box">
-            <img src="bancoz.png" alt="">
+            <img src="imagem/banco.png" alt="">
             <div class="content">
                 <h3>Banco de Dados e SQL</h3>
                 <h1 class="exp">...</h1>
@@ -236,7 +236,7 @@
         </div>
 
         <div class="box">
-            <img src="qa.jpeg" alt="">
+            <img src="imagem/qa.jpeg" alt="">
             <div class="content">
                 <h3>Automação de testes/QA</h3>
                 <h1 class="exp">...</h1>
@@ -245,7 +245,7 @@
         </div>
 
         <div class="box">
-            <img src="flex.png" alt="">
+            <img src="imagem/flex.png" alt="">
             <div class="content">
                 <h3>Posicionamento FlexBox</h3>
                 <h1 class="exp">Posicionamento de itens FlexBox</h1>
@@ -254,7 +254,7 @@
         </div>
 
         <div class="box">
-            <img src="projeto.png" alt="">
+            <img src="imagem/projeto.png" alt="">
             <div class="content">
                 <h3>Display:flex/grid</h3>
                 <h1 class="exp">Site simples, feito em html e CSS
@@ -266,11 +266,20 @@
         </div>
 
         <div class="box">
-            <img src="grid.png" alt="">
+            <img src="imagem/grid.png" alt="">
             <div class="content">
                 <h3>BlogWolf</h3>
                 <h1 class="exp">...</h1>
                     <a href="https://alexsander-coder.github.io/wolfgrid/" class="btn">Mais Detalhes</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="imagem/api_cep.png" alt="">
+            <div class="content">
+                <h3>Consultando CEP via API</h3>
+                <h1 class="exp">...</h1>
+                    <a href="https://alexsander-coder.github.io/apicep/" class="btn">Mais Detalhes</a>
             </div>
         </div>
 
@@ -286,7 +295,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="1555172.jpeg" alt="">
+            <img src="imagem/javascript.jpeg" alt="">
             <div class="content">
                 <h3>JAVASCRIPT</h3>
                 <h1 class="exp">Javascript e TypeScript - front-end e back-end
@@ -296,7 +305,7 @@
         </div>
 
         <div class="box">
-            <img src="phpz.jpg" alt="">
+            <img src="imagem/php.jpg" alt="">
             <div class="content">
                 <h3>PHP</h3>
                 <h1 class="exp">PHP completo, ligação com MySQL, envio de
@@ -306,7 +315,7 @@
         </div>
 
         <div class="box">
-            <img src="bancoz.png" alt="">
+            <img src="imagem/banco.png" alt="">
             <div class="content">
                 <h3>Banco de dados e sql</h3>
                 <h1 class="exp">SQL Server, NoSQL, MySQL, Oracle, T-SQL e PL/SQL</h1>
@@ -314,7 +323,7 @@
         </div>
 
         <div class="box">
-            <img src="qa.jpeg" alt="">
+            <img src="imagem/qa.jpeg" alt="">
             <div class="content">
                 <h3>Automação de testes/QA</h3>
                 <h1 class="exp">Screenshot ao final de cada teste; 
@@ -327,7 +336,7 @@
         </div>
 
         <div class="box">
-            <img src="htmlz.jpeg" alt="">
+            <img src="imagem/html.jpeg" alt="">
             <div class="content">
                 <h3>HTML</h3>
                 <p></p>
@@ -335,7 +344,7 @@
         </div>
 
         <div class="box">
-            <img src="csz.jpeg" alt="">
+            <img src="imagem/css.jpeg" alt="">
             <div class="content">
                 <h3>CSS</h3>
             </div>
@@ -343,7 +352,7 @@
         </div>
 
         <div class="box">
-            <img src="laravel.png" alt="">
+            <img src="imagem/laravel.png" alt="">
             <div class="content">
                 <h3>laravel</h3>
                 <h1 class="exp">Divisão de seu sistema em modelos, visões e controladores.
@@ -354,7 +363,7 @@
         </div>
 
         <div class="box">
-            <img src="cwins.jpeg" alt="">
+            <img src="imagem/csharp.jpeg" alt="">
             <div class="content">
                 <h3>C# .NET</h3>
                 <h1 class="exp">Struct.
@@ -375,11 +384,8 @@
 
 
 <!--<section class="portfolio" id="portfolio">
-
     <h1 class="heading">Meus<span> Projetos</span> </h1>
-
     <div class="box-container">
-
         <div class="box">
             <img src="1555172.jpeg" alt="">
             <div class="content">
@@ -388,7 +394,6 @@
                     <a href="" class="btn">Mais Detalhes</a>
             </div>
         </div>
-
         <div class="box">
             <img src="phpz.jpg" alt="">
             <div class="content">
@@ -397,7 +402,6 @@
                     <a href="" class="btn">Mais Detalhes</a>
             </div>
         </div>
-
         <div class="box">
             <img src="bancoz.png" alt="">
             <div class="content">
@@ -406,7 +410,6 @@
                 <a href="" class="btn">Mais Detalhes</a>
             </div>
         </div>
-
         <div class="box">
             <img src="qa.jpeg" alt="">
             <div class="content">
@@ -415,7 +418,6 @@
                     <a href="" class="btn">Mais Detalhes</a>
             </div>
         </div>
-
         <div class="box">
             <img src="htmlz.jpeg" alt="">
             <div class="content">
@@ -424,17 +426,13 @@
                 <a href="" class="btn">Mais Detalhes</a>
             </div>
         </div>
-
         <div class="box">
             <img src="csz.jpeg" alt="">
             <div class="content">
                 <h3>CSS</h3>
-
                 <a href="" class="btn">Mais Detalhes</a>
             </div>
-
         </div>
-
         <div class="box">
             <img src="laravel.png" alt="">
             <div class="content">
@@ -443,9 +441,7 @@
                     <a href="https://alexsander-coder.github.io/alexsander-portfolio/" class="btn">Mais Detalhes</a>
             </div>
         </div>
-
     </div>
-
 </section>-->
 
 <!-- contact section starts -->
