--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </div>
 
     <div class="share">
-        <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="https://www.linkedin.com/in/alexsander-hugo/" class="fab fa-linkedin"></a>
+        <a href="https://github.com/alexsander-coder" class="fab fa-github"></a>
         <a href="#" class="fab fa-twitter"></a>
         <a href="#" class="fab fa-instagram"></a>
         <a href="#" class="fab fa-pinterest"></a>
@@ -111,7 +111,7 @@
                 visando o funcionamento do programa
                 e a experiência do usuário.
             </p>
-            <a href="https://drive.google.com/uc?id=1vVLmo71JIRk3UbEqS_dD9wpEDPJxKNwP&export=download" class="btn">CV Resumido</a>
+            <a href="https://drive.google.com/u/0/uc?id=1SjYSLK2tEU_nffrz6XW0LTYhSqbHsH1E&export=download" class="btn">CV Resumido</a>
         </div>
         
 
@@ -126,16 +126,20 @@
             <div class="bar bar-1-2"><span></span></div>
             <h3>JavaScript<span>50%</span> </h3>
             <div class="bar bar-1-3"><span></span></div>
+            <h3>Vue.js<span>30%</span> </h3>
+            <div class="bar bar-1-4"><span></span></div>
         
         </div>
 
         <div class="progress">
-            <h3>PHP<span>45%</span> </h3>
+            <h3>PHP/Laravel<span>45%</span> </h3>
             <div class="bar bar-2-1"><span></span></div>
             <h3>Banco de dados e SQL<span>40%</span> </h3>
             <div class="bar bar-2-2"><span></span></div>
             <h3>Automação de testes/QA<span>35%</span> </h3>
             <div class="bar bar-2-3"><span></span></div>
+            <h3>C# .NET<span>25%</span> </h3>
+            <div class="bar bar-2-4"><span></span></div>
         </div>
 
     </div>
@@ -156,7 +160,9 @@
             <i class="fas fa-code"></i>
             <h3>Estagiário de Desenvolvimento WEB</h3>
             <h2 class="exp">SENAI Brasília-DF</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>Melhorias e alterações nos sistemas SENAI e SESI usando Joomla, Wordpress e PHP, participando de 
+                levantamentos de requisitos
+            </p>
         </div>
 
         <!--<div class="box">
@@ -169,7 +175,9 @@
             <i class="fas fa-mobile"></i>
             <h3>Analista de suporte remoto</h3>
             <h2 class="exp">Gilbarco Veeder-Root</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>Prestava suporte em servidores locais, sistema de gerenciamento de postos de combustíveis
+                e loja de conveninência, instalação de certificado digital, problemas nas emissões de notas fiscais
+            reconexão com o banco de dados  </p>
         </div>
 
         <!--<div class="box">
@@ -186,9 +194,11 @@
 
         <div class="box">
             <i class="fab fa-wordpress"></i>
-            <h3>wordpress</h3>
+            <h3>Wordpress / Joomla</h3>
             <h2 class="exp">SENAI Brasília-DF</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>Alterações e manutenções em sistemas no Wordpress, instalação de plugins e gerenciamento.
+                Participando de melhorias e em levantamento de requisitos
+            </p>
         </div>
 
     </div>
@@ -209,7 +219,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="imagem/javascript.jpeg" alt="">
+            <img src="imagem/javascript.jpeg" alt="javascript">
             <div class="content">
                 <h3>JAVASCRIPT</h3>
                 <h1 class="exp">...</h1>
@@ -218,7 +228,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/php.jpg" alt="">
+            <img src="imagem/php.jpg" alt="php">
             <div class="content">
                 <h3>PHP</h3>
                 <h1 class="exp">...</h1>
@@ -227,7 +237,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/banco.png" alt="">
+            <img src="imagem/banco.png" alt="banco de dados">
             <div class="content">
                 <h3>Banco de Dados e SQL</h3>
                 <h1 class="exp">...</h1>
@@ -236,7 +246,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/qa.jpeg" alt="">
+            <img src="imagem/qa.jpeg" alt="automação de testes">
             <div class="content">
                 <h3>Automação de testes/QA</h3>
                 <h1 class="exp">...</h1>
@@ -245,7 +255,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/flex.png" alt="">
+            <img src="imagem/flex.png" alt="display flex">
             <div class="content">
                 <h3>Posicionamento FlexBox</h3>
                 <h1 class="exp">Posicionamento de itens FlexBox</h1>
@@ -254,7 +264,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/projeto.png" alt="">
+            <img src="imagem/projeto.png" alt="flexbox">
             <div class="content">
                 <h3>Display:flex/grid</h3>
                 <h1 class="exp">Site simples, feito em html e CSS
@@ -266,7 +276,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/grid.png" alt="">
+            <img src="imagem/grid.png" alt="grid">
             <div class="content">
                 <h3>BlogWolf</h3>
                 <h1 class="exp">...</h1>
@@ -275,7 +285,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/api_cep.png" alt="">
+            <img src="imagem/api_cep.png" alt="consultando cep">
             <div class="content">
                 <h3>Consultando CEP via API</h3>
                 <h1 class="exp">...</h1>
@@ -295,7 +305,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="imagem/javascript.jpeg" alt="">
+            <img src="imagem/javascript.jpeg" alt="javascript">
             <div class="content">
                 <h3>JAVASCRIPT</h3>
                 <h1 class="exp">Javascript e TypeScript - front-end e back-end
@@ -305,7 +315,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/php.jpg" alt="">
+            <img src="imagem/php.jpg" alt="php">
             <div class="content">
                 <h3>PHP</h3>
                 <h1 class="exp">PHP completo, ligação com MySQL, envio de
@@ -315,7 +325,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/banco.png" alt="">
+            <img src="imagem/banco.png" alt="banco de dados">
             <div class="content">
                 <h3>Banco de dados e sql</h3>
                 <h1 class="exp">SQL Server, NoSQL, MySQL, Oracle, T-SQL e PL/SQL</h1>
@@ -323,7 +333,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/qa.jpeg" alt="">
+            <img src="imagem/qa.jpeg" alt="automação de testes">
             <div class="content">
                 <h3>Automação de testes/QA</h3>
                 <h1 class="exp">Screenshot ao final de cada teste; 
@@ -336,7 +346,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/html.jpeg" alt="">
+            <img src="imagem/html.jpeg" alt="html">
             <div class="content">
                 <h3>HTML</h3>
                 <p></p>
@@ -344,7 +354,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/css.jpeg" alt="">
+            <img src="imagem/css.jpeg" alt="posicionamento css">
             <div class="content">
                 <h3>CSS</h3>
             </div>
@@ -352,7 +362,7 @@
         </div>
 
         <div class="box">
-            <img src="imagem/laravel.png" alt="">
+            <img src="imagem/laravel.png" alt="laravel">
             <div class="content">
                 <h3>laravel</h3>
                 <h1 class="exp">Divisão de seu sistema em modelos, visões e controladores.
@@ -363,10 +373,10 @@
         </div>
 
         <div class="box">
-            <img src="imagem/csharp.jpeg" alt="">
+            <img src="imagem/csharp.jpeg" alt="csharp">
             <div class="content">
                 <h3>C# .NET</h3>
-                <h1 class="exp">Struct.
+                <h1 class="exp">
                      Passagem de parâmetros por Valor e por Referência.
                      Classes Abstratas, Seladas(Sealed) e Interface.
                      Classe e Métodos Parciais.
