--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
         </div>
 
         <div class="box">
-            <img src="imagem/qa.jpeg" alt="automação de testes">
+            <img src="animals.png" alt="">
             <div class="content">
-                <h3>Automação de testes/QA</h3>
+                <h3>Treinando HTML e CSS com Javascript puro</h3>
                 <h1 class="exp">...</h1>
-                    <a href="" class="btn">Mais Detalhes</a>
+                    <a href="https://alexsander-coder.github.io/animals/" class="btn">Mais Detalhes</a>
             </div>
         </div>
 
