--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <img src="animals.png" alt="">
             <div class="content">
                 <h3>Treinando HTML e CSS com Javascript puro</h3>
-                <h1 class="exp">...</h1>
+                <h1 class="exp">Site com implementações de Javascript puro, futuramente irei iplementar Vue.js</h1>
                     <a href="https://alexsander-coder.github.io/animals/" class="btn">Mais Detalhes</a>
             </div>
         </div>
@@ -279,7 +279,7 @@
             <img src="imagem/grid.png" alt="grid">
             <div class="content">
                 <h3>BlogWolf</h3>
-                <h1 class="exp">...</h1>
+                <h1 class="exp">Massificando CSS Grid</h1>
                     <a href="https://alexsander-coder.github.io/wolfgrid/" class="btn">Mais Detalhes</a>
             </div>
         </div>
@@ -288,7 +288,7 @@
             <img src="imagem/api_cep.png" alt="consultando cep">
             <div class="content">
                 <h3>Consultando CEP via API</h3>
-                <h1 class="exp">...</h1>
+                <h1 class="exp">sistema com foco em back-end, consumindo API.</h1>
                     <a href="https://alexsander-coder.github.io/apicep/" class="btn">Mais Detalhes</a>
             </div>
         </div>
