--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <img src="animals.png" alt="">
             <div class="content">
                 <h3>Treinando HTML e CSS com Javascript puro</h3>
-                <h1 class="exp">Site com implementações de Javascript puro, futuramente irei iplementar Vue.js</h1>
+                <h1 class="exp">Site com implementações de Javascript puro, futuramente irei implementar Vue.js</h1>
                     <a href="https://alexsander-coder.github.io/animals/" class="btn">Mais Detalhes</a>
             </div>
         </div>
